# bamana

./: .gitignore  ARCHITECTURE.md  CHARTER.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  clippy.toml
benchmarks/: Dockerfile  README.md  benchmark_readiness_checklist.md  cleanup.md  design.md  environment.yml  input-policy.md  main.nf  nextflow.config  params.schema.json  staging.md  status_for_tomorrow.md
benchmarks/R/: README.md  aggregate_results.R  build_benchmark_report.R  build_support_matrix.R  fastq_gz_enumerate_report.Rmd  fastq_ingress_report.Rmd  plot_benchmarks.R  render_fastq_ingress_report.R
benchmarks/conf/: docker.config  local-ssd.config  local.config  shared-fs.config
benchmarks/inputs/: README.md  example_manifest.json  manifest.schema.json
benchmarks/modules/: aggregate_results.nf  benchmark_wrapper_run.nf  index_raw_results.nf  plot_results.nf  report_results.nf  run_bamana.nf  run_fastcat.nf  run_rasusa.nf  run_sambamba.nf  run_samtools.nf  run_seqtk.nf  stage_input.nf
benchmarks/params.examples/: fastq_gz.example.json  local.example.json  mapped_bam.example.json
benchmarks/results/: README.md  benchmark_row.schema.json  example_raw_result.failure.json  example_raw_result.json  example_raw_result.unsupported.json  example_support_matrix.csv  example_support_summary.csv  example_tidy_results.csv  example_tidy_summary.csv  result.schema.json  support_matrix_contract.md  tidy_result_contract.md
benchmarks/subworkflows/: collect_results.nf  (+1 more)
docs/: architecture.md  cli.md  dependency-policy.md  fixtures.md  interop-testing.md  json-output.md  performance-core.md  project-charter.md  roadmap.md  testing-oracles.md
spec/: README.md
src/: cli.rs  error.rs  lib.rs  main.rs
tests/: contract.rs
(+256 files in other folders)
