[workspace]
members = ["crates/bamana", "crates/bamana-core"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
flate2 = "1.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
