[package]
name = "bamana"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
version = "0.1.0"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
flate2 = "1.1.2"
noodles-bam = "0.85.0"
noodles-cram = "0.88.0"
noodles-fasta = "0.58.0"
noodles-sam = "0.81.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
